# stargate

./: .bazelrc  .gitignore  CONTRIBUTING.md  README.md  WORKSPACE
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: DEVELOPER.md
docs/BAZEL/: README.md
projects/google-cloud-builders/: README.md  cloudbuild.yaml
projects/google-cloud-builders/ng/: README.md  cloudbuild.yaml
projects/goroot/: WORKSPACE
projects/goroot/src/gourmet/: README.md
projects/goroot/src/gourmet/appengine/image/: BUILD.bazel  resize.go
projects/goroot/src/gourmet/gapps/: BUILD.bazel  spreadsheet.go
