load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["resize.go"],
    importpath = "github.com/example/project/src/gourmet/appengine/image",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_nfnt_resize//:go_default_library",
        "@org_golang_google_api//storage/v1:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)
